objects/Transfer_Cost_Table__c.object
<CustomObject>
    <fields>
        <fullName>TCT_Case_Transfer_Cost__c</fullName>
        <label>Case Transfer Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TCT_Palt_Transfer_Cost__c</fullName>
        <label>Palt Transfer Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TCT_Primary_Whs__c</fullName>
        <label>Primary Whs</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCT_Transfer_Whs__c</fullName>
        <label>Transfer Whs</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Transfer Cost Table</label>
    <nameField>
        <label>Transfer Cost Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transfer Cost Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>